--- a/index.Rmd
+++ b/index.Rmd
@@ -9,20 +9,31 @@ output: html_document
 Hello World
 
 '''{r}
-
+escapement <- read.csv("knb.92020.1.csv",, stringsAsFactors = FALSE)
+escapement
 '''
 
 '''{r}
+library(tidyr)
+library(dplyr)
+library(leaflet)
+library(DT)
+'''
 
+
+'''{r}
+median_esc <- escapement %>%
+  separate(sampleDate, c("Year", "Month", "Day"), sep = "-") %>%
+  group_by(Species, Location, Year) %>%
+  summarise(escapement = sum(DailyCount)) %>%
+  group_by(Species) %>%
+  summarise(median_escapement = median(escapement))
+median_esc  
 '''
 
 
 '''{r}
 
-'''
-
-
-'''{r}
 
 '''
 
